fix sidebar cropping on zoom-out by capping center column width
Replace 1fr 5fr 1fr grid with 1fr min(72vw, 1400px) 1fr so sidebars
grow proportionally on wider viewports. Remove negative margin hack
that pushed decorations off-screen. Align sidebar images toward
content edge and cap at 350px/400px max-width.

--- a/css/ai_prototype_pitch.css
+++ b/css/ai_prototype_pitch.css
@@ -173,7 +173,7 @@ h1 {
 
 .three-column-layout {
     display: grid;
-    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-columns: 1fr min(72vw, 1400px) 1fr;
     gap: 0;
 }
 
@@ -187,16 +187,19 @@ h1 {
 }
 
 .sidebar-left {
-    margin-left: -12vw;
-    width: calc(100% + 12vw);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .sidebar-right {
-    margin-right: 12vw;
-    width: calc(100% + 12vw);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .sidebar-image {
+    max-width: 350px;
     width: 100%;
     height: auto;
     max-height: 1200px;
@@ -1525,10 +1528,20 @@ body.no-scroll {
 
 @media (min-width: 2200px) {
     .three-column-layout {
-        display: flex;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: 1fr min(72vw, 1400px) 1fr;
         width: 100%;
-        padding: 0 5vw;
+        padding: 0;
+    }
+
+    .sidebar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sidebar-image {
+        max-width: 400px;
     }
 
     .main-content-area {
