--- a/css/ai_time_capsule.css
+++ b/css/ai_time_capsule.css
@@ -249,7 +249,7 @@ body.no-scroll {
 
 .three-column-layout {
     display: grid;
-    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-columns: 1fr min(72vw, 1400px) 1fr;
     align-items: start;
     gap: 0;
 }
@@ -264,16 +264,19 @@ body.no-scroll {
 }
 
 .sidebar-left {
-    margin-left: -12vw;
-    width: calc(100% + 12vw);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .sidebar-right {
-    margin-right: 12vw;
-    width: calc(100% + 12vw);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .sidebar-image {
+    max-width: 350px;
     width: 100%;
     height: auto;
     max-height: 1200px;
@@ -1494,10 +1497,20 @@ body.no-scroll {
 
 @media (min-width: 2200px) {
     .three-column-layout {
-        display: flex;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: 1fr min(72vw, 1400px) 1fr;
         width: 100%;
-        padding: 0 5vw;
+        padding: 0;
+    }
+
+    .sidebar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sidebar-image {
+        max-width: 400px;
     }
 
     .main-content-area {
